--- a/22_char string array/.vscode/settings.json
+++ b/22_char string array/.vscode/settings.json
@@ -5,5 +5,6 @@
         "ostream": "cpp",
         "xlocale": "cpp",
         "xstring": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
